[project]
name = "leetcode150-root"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "pytest>=9.0.2",
    "pre-commit>=4.1.0",
]

[tool.poetry]
package-mode = false
packages = [
    { include = "arrayI", from = "python/quest/src" },
    { include = "arrayII", from = "python/quest/src" },
    { include = "data_structures", from = "python/quest/src" },
    { include = "sort", from = "python/quest/src" },
    { include = "tree", from = "python/quest/src" },
    { include = "two_pointer", from = "python/quest/src" },
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["python/quest/tests", "python/quest/src"]
pythonpath = ["python/quest/src"]
