[project]
name = "quest"
version = "0.1.0"
description = "LeetCode quest challange"
authors = [
    {name = "none"}
]
license = {text = "MIT"}
requires-python = ">=3.14"
dependencies = [
    "pytest (>=9.0.2,<10.0.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["src"]